--- a/custom.css
+++ b/custom.css
@@ -259,7 +259,7 @@ body > * {
     transform: translateY(-50%); /* Ajuste para centrar verticalmente el botón respecto a top:50% */
     width: 50px;
     height: 50px;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(0, 255, 0, 0.8);
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -268,8 +268,8 @@ body > * {
     color: var(--primary);
     text-decoration: none;
     font-size: 1.8rem;
-    font-weight: bold;
-    opacity: 0.9;
+    font-weight: bolder;
+    opacity: 0.8;
     transition: all 0.3s ease;
     z-index: 1000;
     border: none;
